<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnVolver"
        android:text="@string/volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/mis_productos"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/texto_principal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/producto_demo"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>