<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="@dimen/form_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:hint="@string/hint_nombre_producto"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:textColor="@color/texto_principal"
            android:textColorHint="@color/texto_hint"
            android:backgroundTint="@color/input_border"/>

        <EditText
            android:id="@+id/etPrecio"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:hint="@string/hint_precio"
            android:inputType="numberDecimal"
            android:autofillHints="none"
            android:textColor="@color/texto_principal"
            android:textColorHint="@color/texto_hint"
            android:backgroundTint="@color/input_border"/>

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:hint="@string/hint_descripcion"
            android:inputType="textMultiLine"
            android:autofillHints="none"
            android:textColor="@color/texto_principal"
            android:textColorHint="@color/texto_hint"
            android:backgroundTint="@color/input_border"/>

        <EditText
            android:id="@+id/etImagenUrl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:hint="@string/hint_imagen_url"
            android:inputType="textUri"
            android:autofillHints="none"
            android:textColor="@color/texto_principal"
            android:textColorHint="@color/texto_hint"
            android:backgroundTint="@color/input_border"/>

        <Button
            android:id="@+id/btnImagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/seleccionar_imagen"
            android:textColor="@color/texto_blanco"
            android:backgroundTint="@color/boton_primario"/>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/guardar_producto"
            android:textColor="@color/texto_blanco"
            android:backgroundTint="@color/boton_verde"/>

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/volver"
            android:textColor="@color/texto_blanco"
            android:backgroundTint="@color/boton_secundario"/>

    </LinearLayout>

</ScrollView>