<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnUbicar"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="12dp"
        android:text="@string/obtener_ubicacion"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary_dark" />

    <TextView
        android:id="@+id/txtUbicacion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ubicacion_aqui"
        android:textSize="18sp"
        android:textColor="@color/texto_principal"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnContinuar"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="12dp"
        android:layout_marginTop="30dp"
        android:text="@string/continuar_pago"
        android:textColor="@color/white"
        android:backgroundTint="@color/verde_oscuro" />

</LinearLayout>